tests/invalid/list_index_wrong_arg_count/main.py
def run_case() -> None:
    xs: list[int] = [2, 1]
    i: int = xs.index()
    print(i)


if __name__ == "__main__":
    run_case()
